--- a/android-client/res/values-ru/strings.xml
+++ b/android-client/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Помошник покупателя</string>
+    <string name="label">Загрузка данных для \r\n%1$s</string>
 </resources>
