--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Shopper Helper</string>
+    <string name="label">Download data for \r\n %1$s</string>
 </resources>
