--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Shopper Helper</string>
-    <string name="label">Download data for \r\n %1$s</string>
+    <string name="label">Download data for\r\n%1$s</string>
     <string name="menu_refresh">Refresh</string>
-    <string name="menu_share">Share</string>
+    <string name="menu_details">Details</string>
     <string name="menu_add">Add</string>
 </resources>
