--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="menu_refresh">Refresh</string>
     <string name="menu_details">Details</string>
     <string name="menu_add">Add</string>
+    <string name="addPriceDialogAddButton">Add</string>
+    <string name="addPriceDialogCancelButton">Cancel</string>
 </resources>
