--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="addPriceDialogCancelButton">Cancel</string>
     <string name="newPriceAddButton">Add</string>
     <string name="newPriceCancelButton">Cancel</string>
+
+    <string-array name="times_array">
+        <item>5 min</item>
+        <item>10 min</item>
+        <item>15 min</item>
+        <item>30 min</item>
+    </string-array>
 </resources>
