group prices by store

--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="newPriceAddButton">Add</string>
     <string name="newPriceCancelButton">Cancel</string>
     <string name="addPriceSelectStore">Select</string>
+    <string name="Add">Add</string>
+    <string name="name">Name</string>
+    <string name="ttl">Time to live</string>
+    <string name="price">Price</string>
 
     <string-array name="times_array">
         <item>5 min</item>
