--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Shopper Helper</string>
-    <string name="label">Download data for\r\n%1$s</string>
+    <string name="label">Download data for\r\n<b>%1$s</b></string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_details">Details</string>
     <string name="menu_add">Add</string>
     <string name="addPriceDialogAddButton">Add</string>
-    <string name="addPriceDialogCancelButton">Cancel</string>
     <string name="newPriceAddButton">Add</string>
-    <string name="newPriceCancelButton">Cancel</string>
     <string name="addPriceSelectStore">Select</string>
     <string name="Add">Add</string>
     <string name="name">Name</string>
     <string name="ttl">Time to live</string>
     <string name="price">Price</string>
+    <string name="addStore">Add store</string>
 
     <string-array name="times_array">
         <item>5 min</item>
