--- a/android-client/res/values-ru/strings.xml
+++ b/android-client/res/values-ru/strings.xml
@@ -14,6 +14,9 @@
     <string name="ttl">Время жизни</string>
     <string name="price">Цена</string>
     <string name="addStore">Добавить магазин</string>
+    <string name="storeNotSelected">Магазин не выбран или вышло время ожидания</string>
+    <string name="priceRequred">Цена не задана</string>
+    <string name="barCodeRequred">Код товара не задан</string>
 
     <string-array name="times_array">
         <item>5 мин</item>
