--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="storeNotSelected">Store is now selected or expired</string>
     <string name="priceRequred">Price is invalid</string>
     <string name="barCodeRequred">Barcode requred</string>
+    <string name="radiusLabel">%.1f km</string>
+    <string name="AddAndClose">Add and Close</string>
 
     <string-array name="times_array">
         <item>5 min</item>
