--- a/android-client/res/values-ru/strings.xml
+++ b/android-client/res/values-ru/strings.xml
@@ -19,6 +19,7 @@
     <string name="barCodeRequred">Код товара не задан</string>
     <string name="radiusLabel">%.1f км</string>
     <string name="AddAndClose">Добавить и закрыть</string>
+    <string name="history">История</string>
 
     <string-array name="times_array">
         <item>5 мин</item>
