--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="history">History</string>
     <string name="error_incorrect_value">Incorect value</string>
     <string name="error_store_already_exist">Store with this name allready exists</string>
+    <string name="menu_change_map_view">Change map view</string>
 
     <string-array name="times_array">
         <item>5 min</item>
